--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
 
                     404px, 920px, 1280px
                     -->
+                    <picture>
+                        <source media="(min-width:404px)" srcset="images/majorca-beach-square-s.jpg">
+                        <source media="(min-width:920px)" srcset="images/majorca-beach-vertical-m.jpg">
+                        <source media="(min-width:1280px)" srcset="images/majorca-beach-horizontal-l.jpg">
+                        <img src="images/majorca-beach-square-s.jpg" alt="Beach in Majorca with turquoise water">
+                    </picture>
+                    
                     <figcaption>Photo by <a href="https://unsplash.com/@charliefirth?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Charlie Firth</a> on <a href="https://unsplash.com/photos/sea-waves-crashing-on-shore-during-sunset-HQJIQjXq1HI?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></figcaption>
                 </figure>
             </section>
