--- a/index.html
+++ b/index.html
@@ -41,20 +41,14 @@
                 <h2>Introduction</h2>
                 <p>Imagine an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city. The island and its capital, Palma, are overflowing with character, while its beaches are famous all around the world, making it one of the most sought-after summer destinations.</p>
                 <figure>
-                <!--Responsive Image for Art Direction
-                    images/majorca-beach-square-s.jpg
-                    images/majorca-beach-vertical-m.jpg
-                    images/majorca-beach-horizontal-l.jpg
 
-                    404px, 920px, 1280px
-                    -->
                     <picture>
                         <source media="(min-width:404px)" srcset="images/majorca-beach-square-s.jpg">
                         <source media="(min-width:920px)" srcset="images/majorca-beach-vertical-m.jpg">
                         <source media="(min-width:1280px)" srcset="images/majorca-beach-horizontal-l.jpg">
                         <img src="images/majorca-beach-square-s.jpg" alt="Beach in Majorca with turquoise water">
                     </picture>
-                    
+
                     <figcaption>Photo by <a href="https://unsplash.com/@charliefirth?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Charlie Firth</a> on <a href="https://unsplash.com/photos/sea-waves-crashing-on-shore-during-sunset-HQJIQjXq1HI?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></figcaption>
                 </figure>
             </section>
@@ -108,12 +102,14 @@
                 <h2>Testimonials</h2>
 
                 <article>
-                    <!--Responsive Image for resolution switching
-                        images/miranda-blake-L.png" 
-                        images/miranda-blake-S.png 404w
-                        images/miranda-blake-M.png 920w
-                        images/miranda-blake-L.png 1280w
-                    -->
+
+                    <picture>
+                        <source media="(min-width:404px)" srcset="images/miranda-blake-S.png">
+                        <source media="(min-width:920px)" srcset="images/miranda-blake-M.png">
+                        <source media="(min-width:1280px)" srcset="images/miranda-blake-L.png">
+                        <img src="images/miranda-blake-L.png" alt="Portrait of Miranda Blake">
+                    </picture>
+                        
                     <div>
                         <h3>Miranda Blake</h3>
                         <dl>
