--- a/index.html
+++ b/index.html
@@ -127,6 +127,14 @@
                         images/max-winter-M.png 920w
                         images/max-winter-L.png 1280w
                     -->
+
+                    <picture>
+                        <source media="(min-width:404px)" srcset="images/max-winter-S.png">
+                        <source media="(min-width:920px)" srcset="images/max-winter-M.png">
+                        <source media="(min-width:1280px)" srcset="images/max-winter-L.png">
+                        <img src="images/max-winter-L.png" alt="Portrait of Max Winter">
+                    </picture>
+
                     <div>
                         <h3>Max Winter</h3>
                         <dl>
@@ -144,6 +152,14 @@
                         images/ines-villegoes-M.png 920w
                         images/ines-villegoes-L.png 1280w 
                     -->
+
+                    <picture>
+                        <source media="(min-width:404px)" srcset="images/ines-villegoes-S.png">
+                        <source media="(min-width:920px)" srcset="images/ines-villegoes-M.png">
+                        <source media="(min-width:1280px)" srcset="images/ines-villegoes-L.png">
+                        <img src="images/ines-villegoes-L.png" alt="Portrait of Inés Villegoes">
+                    </picture>
+
                     <div>
                         <h3>Inés Villegoes</h3>
                         <dl>
@@ -161,6 +177,14 @@
                         images/carmen-lorenzo-M.png 920w
                         images/carmen-lorenzo-L.png 1280w
                     -->
+                        
+                    <picture>
+                        <source media="(min-width:404px)" srcset="images/carmen-lorenzo-S.png">
+                        <source media="(min-width:920px)" srcset="images/carmen-lorenzo-M.png">
+                        <source media="(min-width:1280px)" srcset="images/carmen-lorenzo-L.png">
+                        <img src="images/carmen-lorenzo-L.png" alt="Portrait of Carmen Lorenzo">
+                    </picture>
+
                     <div>
                         <h3>Carmen Lorenzo</h3>
                         <dl>
