added nav bar, no style

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 </head>
 <body>
 
+ 
+    <nav class="skip-links">
+        <h2>Skip Links</h2>
+        <ul>
+            <li><a href="#main">Skip to Main Content</a></li>
+            <li><a href="#plan-your-trip">Skip to Plan Your Trip</a></li>
+            <li><a href="#testimonials">Skip to Testimonials</a></li>
+            <li><a href="#about-your-destination">Skip to About Your Destination</a></li>
+            <li><a href="#contact-us">Skip to Contact Us</a></li>
+        </ul>
+    </nav>
+
     <header>
         <h1>Destination Majorca</h1>
         <p>Let Wonderlust Travel help you plan the trip of your dreams!</p>
@@ -34,7 +46,7 @@
 
 
     <main>
-        <article>
+        <article id="main">
             <h2>Majorca</h2>
 
             <section id="intro">
